<resources>
    <string name="app_name">Principal</string>

    <string name="label_calculadora">Calculadora</string>
    <string name="label_conversores">Conversores</string>
    <string name="label_simuladores">Simuladores</string>
    <string name="label_consulta">Consulta</string>
    <string name="label_leitores">Leitores</string>
    <string name="label_ferramentas">Ferramentas</string>

    <string name="label_imc">Índice de massa corporal</string>
    <string name="label_churrasco">Churrasco</string>
    <string name="label_combustivelXetanol">Gasolina X Etanol</string>
    <string name="label_consumo">Consumo combustível</string>
    <string name="label_tx_juros">Taxa de juros</string>

    <string name="label_qr_code">QR Code</string>

    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="idade">Idade</string>
    <string name="pesoKg">Peso (Kg)</string>
    <string name="alturaMetros">Altura (m)</string>
    <string name="alturaCentimetros">Altura (cm)</string>
    <string name="precoGasolina">Preço gasolina</string>
    <string name="precoEtanol">Preço etanol</string>
    <string name="quilometragemRodados">Quilômetros rodados</string>
    <string name="listrosCombustivel">Litros de combustível</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="selecione_itens">Selecione os itens do churrasco</string>
    <string name="qntHomens">Quantidade de homens</string>
    <string name="qntMulheres">Quantidade de mulheres</string>
    <string name="qntCriancas">Quantidade de crianças</string>
    <string name="fechar">Fechar</string>
    <string name="carnes">Carnes</string>
    <string name="acompanhamentos">Acompanhamentos</string>
    <string name="bebidas">Bebidas</string>
    <string name="outros">Outros</string>
    <string name="buttonUndo">DESFAZER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="numeroMeses">Número de meses</string>
    <string name="meses">Meses</string>
    <string name="txJuros">Taxa de juros</string>
    <string name="juros">Juros</string>
    <string name="valorFinanciamento">Valor do financiamento</string>
    <string name="valorParcelas">Valor das parcelas</string>
    <string name="valor">Valor</string>
    <string name="parcelas">Parcelas</string>

</resources>
