<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" android:layout_width="wrap_content">

    <EditText
        android:id="@+id/txJutosNumeroMeses"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numeroMeses"
        android:inputType="number"
        android:textSize="16sp"
        android:theme="@style/CinzaThme" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:text="@string/meses"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/txJurosJuros"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txJuros"
        android:inputType="number"
        android:textSize="16sp"
        android:theme="@style/CinzaThme" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:text="@string/juros"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/TxJurosValorFinanciamento"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valorFinanciamento"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textSize="16sp"
        android:theme="@style/CinzaThme" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:text="@string/valor"
        android:textSize="10sp" />
</LinearLayout>