<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.InicialActivity">


    <Button
        android:id="@+id/Calculadora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_calculadora"
        android:onClick="navCalculadora"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/Conversores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_conversores"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/Simuladores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_simuladores"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/Consulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_consulta"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/Leitores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_leitores"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/Ferramentas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_ferramentas"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>


</LinearLayout>
