<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.CalculadoraActivity"
    android:background="@android:color/white">


    <Button
        android:id="@+id/Imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_imc"
        android:onClick="navImc"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/Churrasco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_churrasco"
        android:onClick="navChurrasco"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/Gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_combustivelXetanol"
        android:onClick="navGasolina"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/Consumo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_consumo"
        android:onClick="navConsumo"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_tx_juros"
        android:onClick="navTxJuros"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

</LinearLayout>
