<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="br.com.lampmobile.flagment.TaxaJurosFragment"
    android:background="@android:color/white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <EditText
                    android:id="@+id/txJurosValorFinanciamento"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valorFinanciamento"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:theme="@style/CinzaThme" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@string/valor"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/txJurosParcelas"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valorParcelas"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:theme="@style/CinzaThme" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@string/parcelas"
                    android:textSize="10sp" />



                <EditText
                    android:id="@+id/txJurosNumeroMeses"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numeroMeses"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:theme="@style/CinzaThme" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@string/meses"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/txJurosCalcular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/button_rounded_corner_tx_juros"
                    android:onClick="calcular"
                    android:text="calcular"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/white" />

            </LinearLayout>


    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/txJurosAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">

    </com.google.android.gms.ads.AdView>

</FrameLayout>