<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="br.com.lampmobile.flagment.MesesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <EditText
                    android:id="@+id/mesesNumeroMeses"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numeroMeses"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:theme="@style/CinzaThme" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@string/meses"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/mesesJuros"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txJuros"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:theme="@style/CinzaThme" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@string/juros"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/mesesValorFinanciamento"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valorFinanciamento"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textSize="16sp"
                    android:theme="@style/CinzaThme" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@string/valor"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/mesesCalcular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/button_rounded_corner_tx_juros"
                    android:onClick="calcular"
                    android:text="meses - calcular"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_historico"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp">

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/mesesAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">

    </com.google.android.gms.ads.AdView>
</FrameLayout>
