<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.calculadora.ConsumoActivity">

    <EditText
        android:id="@+id/consumoQuilometro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quilometragemRodados"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="@color/consumo200"
        android:textColor="@color/consumo200"
        android:theme="@style/ConsumoEditTextTheme"/>

    <EditText
        android:id="@+id/consumoCombustivel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/listrosCombustivel"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="@color/consumo200"
        android:textColor="@color/consumo200"
        android:theme="@style/ConsumoEditTextTheme"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calcular"
        android:onClick="calcular"
        android:background="@color/consumo900"
        android:textColor="@android:color/white"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/consumoResultadoDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryConsumo"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:foregroundGravity="bottom"
        android:layout_gravity="bottom">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            android:layout_gravity="bottom">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</LinearLayout>
