<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.calculadora.ChurrascoActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/churrascoHomens"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qntHomens"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="@color/churrasco200"
                android:textColor="@color/churrasco200"
                android:theme="@style/ChurrascoEditTextTheme"/>

            <EditText
                android:id="@+id/churrascoMulheres"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qntMulheres"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="@color/churrasco200"
                android:textColor="@color/churrasco200"
                android:theme="@style/ChurrascoEditTextTheme"/>

            <EditText
                android:id="@+id/churrascoCriancas"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qntCriancas"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="@color/churrasco200"
                android:textColor="@color/churrasco200"
                android:theme="@style/ChurrascoEditTextTheme"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="calcular"
                android:text="Calcular"
                android:background="#004d40"
                android:textColor="@android:color/white"
                android:layout_marginTop="12dp"/>


            <TextView
                android:id="@+id/churrascoResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="8dp"
                android:textColor="@color/colorPrimaryDarkChurrasco"
                android:textSize="20dp"
                android:gravity="center" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:textStyle="bold">

                <TextView
                    android:id="@+id/churrascoResultadoItem"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textColor="@color/colorPrimaryDarkChurrasco"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/churrascoResultadoValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimaryDarkChurrasco"
                    android:textSize="18dp" />
            </LinearLayout>
            </ScrollView>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="bottom">

        <com.google.android.gms.ads.AdView
            android:id="@+id/churrascoAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
    </LinearLayout>
</LinearLayout>
